; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/msconfig/extr_msconfig.c_SetDialogIcon.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/msconfig/extr_msconfig.c_SetDialogIcon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hDialogIconBig = common dso_local global i64 0, align 8
@hDialogIconSmall = common dso_local global i64 0, align 8
@IDI_APPICON = common dso_local global i32 0, align 4
@IMAGE_ICON = common dso_local global i32 0, align 4
@uXIcon = common dso_local global i32 0, align 4
@uYIcon = common dso_local global i32 0, align 4
@WM_SETICON = common dso_local global i32 0, align 4
@ICON_BIG = common dso_local global i32 0, align 4
@ICON_SMALL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @SetDialogIcon to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @SetDialogIcon(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i64, i64* @hDialogIconBig, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i64, i64* @hDialogIconBig, align 8
  %8 = call i32 @DestroyIcon(i64 %7)
  br label %9

9:                                                ; preds = %6, %1
  %10 = load i64, i64* @hDialogIconSmall, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %9
  %13 = load i64, i64* @hDialogIconSmall, align 8
  %14 = call i32 @DestroyIcon(i64 %13)
  br label %15

15:                                               ; preds = %12, %9
  %16 = call i32 @GetModuleHandle(i32* null)
  %17 = load i32, i32* @IDI_APPICON, align 4
  %18 = call i32 @MAKEINTRESOURCE(i32 %17)
  %19 = call i64 @LoadIconW(i32 %16, i32 %18)
  store i64 %19, i64* @hDialogIconBig, align 8
  %20 = call i32 @GetModuleHandle(i32* null)
  %21 = load i32, i32* @IDI_APPICON, align 4
  %22 = call i32 @MAKEINTRESOURCE(i32 %21)
  %23 = load i32, i32* @IMAGE_ICON, align 4
  %24 = load i32, i32* @uXIcon, align 4
  %25 = load i32, i32* @uYIcon, align 4
  %26 = call i64 @LoadImage(i32 %20, i32 %22, i32 %23, i32 %24, i32 %25, i32 0)
  store i64 %26, i64* @hDialogIconSmall, align 8
  %27 = load i32, i32* %3, align 4
  %28 = load i32, i32* @WM_SETICON, align 4
  %29 = load i32, i32* @ICON_BIG, align 4
  %30 = load i64, i64* @hDialogIconBig, align 8
  %31 = trunc i64 %30 to i32
  %32 = call i32 @SendMessage(i32 %27, i32 %28, i32 %29, i32 %31)
  %33 = load i32, i32* %3, align 4
  %34 = load i32, i32* @WM_SETICON, align 4
  %35 = load i32, i32* @ICON_SMALL, align 4
  %36 = load i64, i64* @hDialogIconSmall, align 8
  %37 = trunc i64 %36 to i32
  %38 = call i32 @SendMessage(i32 %33, i32 %34, i32 %35, i32 %37)
  %39 = load i32, i32* %2, align 4
  ret i32 %39
}

declare dso_local i32 @DestroyIcon(i64) #1

declare dso_local i64 @LoadIconW(i32, i32) #1

declare dso_local i32 @GetModuleHandle(i32*) #1

declare dso_local i32 @MAKEINTRESOURCE(i32) #1

declare dso_local i64 @LoadImage(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @SendMessage(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
